--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello Rahim Khan</h1>
     <p>thisi my frist git project</p>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias veritatis inventore nesciunt fugit tempora mollitia doloribus asperiores maiores, quisquam nulla dolorem dicta possimus, nostrum laboriosam architecto perspiciatis cupiditate sed laborum.</P>
 </body>
 </html>
