--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Rahim Khan</h1>
+    <h1 style="background-color: greenyellow;">Hello Rahim Khan</h1>
     <p>thisi my frist git project</p>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias veritatis inventore nesciunt fugit tempora mollitia doloribus asperiores maiores, quisquam nulla dolorem dicta possimus, nostrum laboriosam architecto perspiciatis cupiditate sed laborum.</P>
+
+
+
+   
+
+
+<script src="index.js"></script>
 </body>
 </html>
