--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 style="background-color: greenyellow;">Hello Rahim Khan</h1>
-    <p>thisi my frist git project</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius ut tempora accusamus voluptas vitae totam, sunt quidem modi assumenda eveniet porro iure illum pariatur dolorum voluptatibus enim corporis eos deserunt.</p>
 
 
 
